--- a/css/index/index_main.less
+++ b/css/index/index_main.less
@@ -16,3 +16,4 @@
 @import "uib_row_2.less";
 @import "styles/row-height-2 -- row_height.less";
 @import "af-input-group.less";
+@import "afui-input-group-no-dmargins.less";
